Implemented Junit tests for services